[package]
name = "arcorn"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
description = "A bridge between MLIR and Arcon."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.arcon]
git = "https://github.com/cda-group/arcon"
version = "0.1.3"

[dependencies.arcon_macros]
git = "https://github.com/cda-group/arcon"
version = "0.1.3"

[dependencies.macros]
path = "./macros"
version = "0.1.0"

[dependencies.shrinkwraprs]
version = "0.3.0"

[dependencies.prost]
version = "0.7"
